[tool.poetry]
name = "calliope"
version = "0.1.0"
description = ""
authors = ["Matteo Donato <matteo.donato@joule.video>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^20.6"
librosa = "^0.10.1"
rich = "^13.6.0"
moviepy = "^1.0.3"
loguru = "^0.7.2"
pandas = "^2.1.3"
pydantic = "^2.6.1"
pydantic-settings = "^2.6"
python-dotenv = "^1.0.1"
pymongo = "^4.8.0"
faster-whisper = "^1.0.3"
# av 14.3+ ha solo sdist su PyPI (wheel rimosse) e da sorgente richiede ffmpeg 7
av = "14.2.0"
ctranslate2 = "4.4.0"
llvmlite = "^0.44.0"

[tool.poetry.group.dev.dependencies]
memory-profiler = "^0.61.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
