[project]
name = "calliope"
version = "0.1.0"
description = "Telegram bot that transcribes voice and video messages using faster-whisper"
authors = [{ name = "Matteo Donato", email = "matteo.donato@joule.video" }]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "python-telegram-bot>=21.6",
    "librosa>=0.10.2",
    "moviepy>=2.1.2",
    "loguru>=0.7.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pymongo>=4.9",
    "faster-whisper>=1.1.0",
    "ctranslate2>=4.4.0",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "memory-profiler>=0.61.0",
    "ipykernel>=6.29.5",
]

[tool.uv]
# Calliope è un'applicazione eseguita con `python -m calliope`, non un pacchetto
# da installare/pubblicare: uv gestisce solo l'ambiente e le dipendenze.
package = false
