[project]
name = "calliope"
version = "0.1.0"
description = "Telegram bot that transcribes voice and video messages using faster-whisper"
authors = [{ name = "Matteo Donato", email = "matteo.donato@joule.video" }]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "python-telegram-bot>=21.6",
    "librosa>=0.10.2",
    "moviepy>=2.1.2",
    "loguru>=0.7.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pymongo>=4.9",
    "faster-whisper>=1.1.0",
    "ctranslate2>=4.4.0",
    "numpy>=1.26",
]

[project.scripts]
calliope = "calliope.main:main"

[dependency-groups]
dev = [
    "memory-profiler>=0.61.0",
    "ipykernel>=6.29.5",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["calliope"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
# E501 (lunghezza riga) è gestita dal formatter; i literal lunghi (stringhe di
# help, format dei log) non sono spezzabili senza peggiorare la leggibilità.
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
# Permissivo all'avvio (step 1.3): si silenziano gli accessi Optional tipici
# degli update di python-telegram-bot (update.message può essere None). Si
# stringerà sui moduli nuovi nelle fasi successive.
disable_error_code = ["union-attr", "index"]
